# tipbot-backend

./: .gitignore  .travis.yml  Cargo.toml  README.md
.travis/: deploy.sh  tipbot-backend.master.service  trustify.enc  trustify.pub
data/: websites.json
src/: main.rs
src/config/: mod.rs
src/controllers/: mod.rs  qrcodes.rs
src/handlers/: mod.rs
static/: index.html
