[package]
name = "tipbot-backend"
version = "0.1.0"
authors = ["huhn511 <huhn@einfachIOTA.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
env_logger = "0.7"

actix-web = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
qrcode-generator = "1.0.6"